<resources>
    <string name="app_name">Student Progress App</string>
    <string name="notification">Notification</string>
    <string name="refresh">Refresh</string>
    <string name="all_assessments">"Assessments "</string>
    <string name="add_button">Add Button</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="course_name">Course</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="deadline_name">Deadline</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="all_classes">Classes</string>
    <string name="title_home_page">Progress Tech University</string>
    <string name="school_logo">School Logo</string>
    <string name="all_terms">Terms</string>
    <string name="divide">divide_text</string>
    <string name="divider">-</string>
    <string name="all_assessment">Assessments</string>
    <string name="class_name">Class Name</string>
    <string name="term_name">Term</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="instructor_phone">Instructor Phone</string>
    <string name="instructor_email">Instructor Email</string>
    <string name="class_status">Status</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="class_notes">Notes</string>
    <string name="channel_name">channelname</string>
    <string name="channel_description">channel description</string>
    <string-array name="assessment_types">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>
    <string-array name="class_status">
        <item>Plan To Take</item>
        <item>In-Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
    </string-array>
</resources>