<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/assessmentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assessment_name" />

            <EditText
                android:id="@+id/textAssessmentNametxt"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/courseName"
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:text="@string/course_name" />

            <Spinner
                android:id="@+id/courseList"
                android:layout_width="210dp"
                android:layout_height="52dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/assessmentType"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:text="@string/assessment_type" />

            <Spinner
                android:id="@+id/assessmentTypeSpinner"
                android:layout_width="209dp"
                android:layout_height="match_parent"
                android:entries="@array/assessment_types" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/deadlineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline_name" />

            <Button
                android:id="@+id/DatePickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:onClick="datePicker"
                android:textColor="@color/black" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="51dp"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="533dp">

        <Button
            android:id="@+id/SaveButtonAssessment"
            style="@style/Theme.StudentProgressApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF5722"
            android:onClick="saveAssessment"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/DeleteButtonAssessment"
            style="@style/Theme.StudentProgressApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF5722"
            android:onClick="deleteAssessment"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/CancelButtonAssessment"
            style="@style/Theme.StudentProgressApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF5722"
            android:onClick="cancelAssessment"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:cornerRadius="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>