<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout20"
        android:layout_width="412dp"
        android:layout_height="141dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/textTermName"
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/StartDatePickerBtn20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startDatePicker"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/EndDatePickerBtn20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="endDatePicker"
                android:textColor="#FFFFFF" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="411dp"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termClassView">

        <Button
            android:id="@+id/SaveAssessmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveTerm"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Button
            android:id="@+id/DeleteAssessmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deleteTerm"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:ignore="onClick" />

        <Button
            android:id="@+id/CancelAssessmentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelTerm"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/termClassView"
        android:layout_width="409dp"
        android:layout_height="425dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout20" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:clickable="true"
        android:contentDescription="@string/add_button"
        android:onClick="addClass"
        app:backgroundTint="#673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout20"
        app:srcCompat="@drawable/ic_add_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>